# chain

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: rust.yml
crates/chain/: Cargo.toml
crates/chain/src/: lib.rs  logger.rs  main.rs  runtime.rs  template.rs
crates/chain/src/cli/: commands.rs  main.rs  packager.rs  template.rs
crates/chain/src/project/: dependencies.rs  installer.rs  manifests.rs  metadata.rs  mod.rs  packager.rs  settings.rs
crates/chain/src/util/: file.rs  url.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  lib.rs  main.rs  packager.rs  project.rs  runtime.rs  template.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  mcs.rs  metadata.rs  overrides.rs  project.rs  utils.rs
crates/common/src/utils/: file.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  metadata.rs  project.rs  utils.rs
crates/core/src/project/: installer.rs  manifests.rs  mod.rs  settings.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: lib.rs
crates/fetcher/src/providers/: mcutils.rs  mod.rs
crates/project/: Cargo.toml
crates/project/src/: dependencies.rs  installer.rs  lib.rs  manifests.rs  packager.rs  settings.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/templater/: Cargo.toml
crates/templater/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: url.rs
docs/: 00-quick-start.md  01-installation.md  02-dependencies.md  installation.md  quick-start.md
examples/basic-server/: .env  .gitignore  README.md  chain.yml  settings.dev.yml.template  settings.yml
examples/basic-server/config/: server.dev.properties  server.properties
examples/basic-server/src/: server.dev.properties  server.properties
examples/vanilla-server/: .gitignore  README.md  crafty.yml  settings.yml
examples/vanilla-server/src/: server.properties
examples/with-environment-variables/: .gitignore  README.md  chain.yml  settings.dev.yml.template  settings.yml
examples/with-environment-variables/config/: forwarding.secret  velocity.toml
src/: commands.rs  lib.rs  main.rs  template.rs
src/cli/: commands.rs  main.rs  template.rs
src/project/: dependencies.rs  installer.rs  manifests.rs  mod.rs  packager.rs  settings.rs
src/runner/: main.rs
src/util/: logger.rs  mod.rs  url.rs
wix/: License.rtf  main.wxs
