[workspace]
members = ["crates/chain", "crates/cli", "crates/templater", "crates/utils"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
clap = { version = "4.3.4", features = ["derive"] }
cli = { path = "crates/cli" }
log = "0.4"
templater = { path = "crates/templater" }
url = "2.4.0"
utils = { path = "crates/utils" }
