[workspace]
members = ["crates/cli", "crates/common", "crates/project", "crates/templater", "crates/utils"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
clap = { version = "4.3.4", features = ["derive"] }
cli = { path = "crates/cli" }
common = { path = "crates/common" }
log = "0.4"
project = { path = "crates/project" }
serde = { version = "1.0.197", features = ["derive"] }
templater = { path = "crates/templater" }
url = "2.4.0"
utils = { path = "crates/utils" }
