[package]
name = "chain"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[package.metadata.deb]
maintainer = "Zeke <ezequiel_io@pm.me>"
copyright = "2023 <ezequiel_io@pm.me>"

[[bin]]
name = "chain"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
crossterm = "0.26.1"
ignore = "0.4.20"
inquire = "0.6.2"
md5 = "0.7.0"
regex = "1.9.1"
reqwest = "0.11.18"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
url = "2.4.0"
walkdir = "2.3.3"
zip = "0.6.6"
