[package]
name = "chain"
version = "0.1.0"
description = "Make your Minecraft Servers VCS friendly"
edition = "2021"
publish = false
license = "MIT"
authors = ["Zeke <ezequiel_io@pm.me>"]
homepage = "https://github.com/zeke-io/chain"
repository = "https://github.com/zeke-io/chain"

[dependencies]
anyhow.workspace = true
cli.workspace = true
colog = "1.3.0"
crossterm = "0.26.1"
dotenv-flow = "0.16.2"
inquire = "0.6.2"
log.workspace = true
regex = "1.9.1"
reqwest = "0.11.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1", features = ["full"] }
url.workspace = true
utils.workspace = true
walkdir = "2.3.3"
zip = "0.6.6"
