[package]
name = "msc-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[package.metadata.deb]
maintainer = "Zeke <ezequiel_io@pm.me>"
copyright = "2023 <ezequiel_io@pm.me>"

[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
core = { path = "../core" }
ignore = "0.4.20"
md5 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
termion = "2.0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
zip = "0.6.6"
