[package]
name = "cli"
version = "0.1.0"
description = "Make your Minecraft Servers VCS friendly"
edition = "2021"
publish = false
license = "MIT"
authors = ["Zeke <ezequiel_io@pm.me>"]
homepage = "https://github.com/zeke-io/crafty"
repository = "https://github.com/zeke-io/crafty"

[[bin]]
name = "crafty"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colog = "1.3.0"
log.workspace = true
project.workspace = true
templater.workspace = true
tokio = { version = "1", features = ["full"] }
