[package]
name = "project"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
dotenv-flow = "0.16.2"
log.workspace = true
regex = "1.9.1"
reqwest = "0.12.2"
serde.workspace = true
serde_yaml = "0.9.25"
tokio = { version = "1", features = ["full"] }
utils.workspace = true
walkdir = "2.3.3"
zip = "0.6.6"
