[package]
name = "msc-runner"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[package.metadata.deb]
maintainer = "Zeke <ezequiel_io@pm.me>"
copyright = "2023 <ezequiel_io@pm.me>"

[[bin]]
name = "msr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
